# bbsolver

./: .clangd  .editorconfig  .gitignore  BENCHMARKS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/corpus/: README.md  THRESHOLD_NOTE.md  corpus_manifest.csv
benchmarks/fixtures/: blob_variable_topology_continuous.js  blob_variable_topology_mitosis.js  blob_variable_topology_organic.js  blob_variable_topology_smooth.js  blob_variable_topology_sparse.js  blob_variable_topology_subdivision.js
benchmarks/scripts/: _paths.py  blender_fbx_decimate_inner.py  build_svg_comparison.py  generate_case_study_figures.py  generate_fbx_mocap_figures.py  generate_level_playing_field_figure.py  generate_production_corpus_summary.py  generate_round_trip_figures.py  generate_supplementary_csv.py  generate_svg_decimation_figures.py  repatch_verify_cards.py  run_fbx_mocap_comparison.py  run_level_playing_field_comparison.py  run_svg_decimation_comparison.py  smoke_reproduce_one_row.py
benchmarks/supplementary/: determinism_audit.csv  fbx_mocap_full_sweep.csv  fbx_mocap_level_playing_field.csv  fbx_mocap_method_comparison.csv  fbx_mocap_per_property.csv  figure_6_7_noodle_source_v1_timeline.csv  manifest.csv  per_key_6_2_cs2_v1.csv  per_property_6_6_3_ant_rig.csv  per_property_6_6_walk_cycle.csv  production_corpus_per_run.csv  production_corpus_summary.csv  svg_decimation_combined.csv  svg_decimation_results.csv  table_6_2_cs2_headline.csv  table_6_6_1_walk_cycle_pareto.csv  table_6_6_3_ant_rig_headline.csv  table_6_7_1_noodle_pareto.csv  table_6_7_2_noodle_default_vs_experimental.csv  table_6_7_3_blob_v1_vs_v6.csv  table_6_7_3_blob_v6_long_form.csv
cmake/: bbsolverConfig.cmake.in
docs/: AE_SCRIPTUI_HARNESS.md  API_REFERENCE.md  COMPRESSION_CURVES.md  DEVELOPER_GUIDE.md  DP_ALGORITHM.md  MAINTAINERS.md  PACKAGING.md  PATH_HANDLING.md  QUICKSTART.md  RELEASE_PROCESS.md  REPOSITORY_SYNC.md  ROADMAP.md  SOLVER_CLI.md  TEST_CATALOG.md  TUNING_GUIDE.md  USER_GUIDE.md  VALIDATION_WORKFLOWS.md
examples/after-effects/: README.md  bbsolver-json-shim.jsx  bbsolver-test-harness.jsx
examples/blender/: FBX_BEZIER_TANGENTS.md  README.md  bbky_apply_to_fbx.py  fbx_bbsolver_roundtrip.py  fbx_json_patch_bbky.py  fbx_to_bbsm.py
examples/json/: README.md  minimal_position.bbsm.json  minimal_scalar.bbsm.json  minimal_shape_flat.bbsm.json
include/bbsolver/: domain.hpp
protocol/: keys.fbs  samples.fbs
schemas/: key_bundle.schema.json  sample_bundle.schema.json
scripts/: package_local_release.py  validate_json_bundle.py  validate_standalone_package.py
src/app/: cli_options.cpp  main.cpp
src/diagnostics/: solver_diagnostic_events.cpp  solver_diagnostics.cpp
src/dp/: dp_forward_placement.cpp  dp_key_assembly.cpp  dp_placement_limits.cpp  dp_placement_progress.cpp  dp_placer.cpp
src/fit/: segment_fit_bezier.cpp  segment_fit_ceres.cpp  segment_fit_diagnostic_events.cpp  segment_fit_policy.cpp  segment_fit_samples.cpp  segment_fit_shape_temporal.cpp  segment_fit_unified_spatial.cpp  segment_fitter.cpp
src/io/: io_json.cpp  key_bundle_io.cpp  sample_bundle_io.cpp  sample_bundle_validation.cpp  sample_json_timing_io.cpp  sample_json_value_io.cpp  sample_property_io.cpp  schema_contract.cpp  solver_config_io.cpp
src/metrics/: ae_curve.cpp  error_metrics.cpp  unified_spatial.cpp
src/motion_smooth/: motion_path_smooth_bounds.cpp  motion_path_smooth_fairing.cpp  motion_path_smooth_spatial_trajectory.cpp  motion_smooth_bezier_ease.cpp  motion_smooth_dispatch.cpp  motion_smooth_endpoint_keys.cpp  motion_smooth_geometry.cpp  motion_smooth_reduction_gate.cpp  motion_smooth_sample_points.cpp  motion_smooth_shape_flat.cpp  motion_smooth_shape_flat_closed_loop.cpp  motion_smooth_shape_flat_key_emission.cpp  motion_smooth_shape_flat_notes.cpp  motion_smooth_shape_flat_topology_gate.cpp  motion_smooth_shape_loop.cpp  motion_smooth_shape_loop_adaptive.cpp  motion_smooth_shape_loop_curve.cpp  motion_smooth_shape_loop_schedule.cpp  motion_smooth_shape_quality.cpp  motion_smooth_shape_rove_schedule.cpp  motion_smooth_shape_source_key_schedule.cpp  motion_smooth_shape_tangent_lock.cpp  motion_smooth_shape_trajectory_smooth.cpp  motion_smooth_spatial_trajectory.cpp
src/progress/: progress.cpp  solve_cancellation.cpp
src/replacement_temporal/: replacement_temporal_anchor_prune.cpp  replacement_temporal_anchor_prune_fit.cpp  replacement_temporal_forward_span.cpp  replacement_temporal_keys.cpp  replacement_temporal_options.cpp  replacement_temporal_relaxed_fit.cpp  replacement_temporal_segment_fit.cpp  replacement_temporal_solve_options.cpp  replacement_temporal_solver.cpp
src/routing/: property_classification.cpp  property_route_solver.cpp  property_solver_routing.cpp  solve_mode_policy.cpp
src/runtime/: runtime_env.cpp  solve_parallel_runtime_scope.cpp
src/samples/: raw_frame_keys.cpp  sample_key_timing.cpp  sample_value_helpers.cpp  source_key_preservation.cpp
src/shape/: shape_flat_topology.cpp  sharp_corner_policy.cpp
src/solve/: fallback_property_solver.cpp  plain_property_solver.cpp  solve_command.cpp  solve_command_config.cpp  solve_lifecycle_reporting.cpp  solve_path_preparation.cpp  solve_property_completion.cpp  solve_property_output.cpp  solve_property_post_processing.cpp  solve_property_temporal_prelude.cpp  solve_property_temporal_result.cpp  solver_observability.cpp  solver_reporting.cpp  static_key_cleanup.cpp
src/verify/: verifier.cpp  verify_dump_commands.cpp
tests/: README.md
tests/fixtures/: color_pulse.bbsm.json
tests/package_smoke/: CMakeLists.txt  main.cpp
tests/policies/: README.md  _solver_policy_paths.py  main_dispatch_only_policy.py  motion_smooth_facade_lock_policy.py  path_multimode_refactor_policy.py  property_solver_routing_policy.py  sample_json_refactor_policy.py  solver_diagnostic_events_schema_policy.py  solver_diagnostics_boundary_policy.py  solver_diagnostics_policy.py  solver_layout_policy.py  solver_progress_policy.py  (+2 more)
(+461 files in other folders)
